# www

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: template.html
assets/pages/: index.md
assets/static/: style.css
src/: main.rs
